<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfcfcf"
    android:orientation="vertical">

    <TextView
        android:id="@+id/t11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/F"
        android:textColor="#000"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/et11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/U" />

    <EditText
        android:id="@+id/et12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/P" />

    <EditText
        android:id="@+id/et13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/R" />

    <EditText
        android:id="@+id/et14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/E" />

    <EditText
        android:id="@+id/et15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:hint="@string/C" />

    <TextView
        android:id="@+id/t12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/A"
        android:textColorHint="#fff"
        android:textSize="15dp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/l12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/b11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/Rr"
            android:textColor="#fff" />

        <!--   <Button
               android:id="@+id/b12"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="0.5"
               android:layout_marginLeft="5dp"
               android:background="@color/colorPrimary"
               android:text="@string/Cr" />-->
        <Button
            android:id="@+id/b13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/Ce"
            android:textColor="#fff" />

    </LinearLayout>

</LinearLayout>